syntax = "proto3";

package comments;

service CommentsService {
    rpc CreateComment (CreateCommentDTO) returns (Comment);
    rpc UpdateComment (UpdateCommentDTO) returns (Comment);
    rpc DeleteComment (DeleteCommentDTO) returns (bool);
    rpc GetComments (GetCommentsDTO) returns (Comment);
}

message Comment {
    string id = 1;
    string msg = 2;
    string file_ids = 3;
    string user_id = 4;
    string item_id = 5;
    CommentType type = 6;
    int64 createdAt = 7;
    CommentState state = 8;
}

message CreateCommentDTO {
    string msg = 1;
    string file_ids = 2;
    string user_id = 3;
    string item_id = 4;
    CommentType type = 5;
}

message UpdateCommentDTO {
    string id = 1;
    string msg = 2;
    string file_ids = 3;
    string user_id = 4;
    string item_id = 5;
    CommentType type = 6;
    CommentState state = 7;
}

message DeleteCommentDTO {
    string id = 1;
}

message GetCommentsDTO {
    string item_id = 1;
    CommentType type = 2;
    int64 take = 3;
    int64 skip = 4;
}

enum CommentState {
    ACTIVE = 1;
    UNACTIVE = 0;
}

enum CommentType {
    POST = 0;
    STORY = 1;
    COMMENT = 2;
}

